@@ -1,1 +1,2 @@
 -Ddevelocity.scan.disabled=true
+--enable-preview
